--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost/tacocloud
-    username: tacodb
-    password: tacopassword
-    schema: schema.sql
-    data: data.sql
+    url: jdbc:mysql://localhost:3306/helenscake?serverTimezone=UTC
+    username: root
+    password: DEMOTOoth2017@
+    hikari:
+      connection-test-query: 'SELECT 1'
 
 logging:
   level:
