--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,6 @@
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/helenscake?serverTimezone=UTC
-    username: root
-    password: DEMOTOoth2017@
-    hikari:
-      connection-test-query: 'SELECT 1'
+  profiles:
+    active: dev
 
-logging:
-  level:
-    root: WARN
-    org:
-      springframework:
-        security: DEBUG
+liquibase:
+  change-log: classpath:/db/master.xml
